--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.2",
     "next": "latest",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0"
   },
   "engines": {
