--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.3.2",
     "next": "latest",
     "react": "18.2.0",
