--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "29.6.4"
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "29.6.4",
+    "msw": "^2.0.6",
+    "text-encoding": "^0.7.0",
+    "undici": "^5.27.2"
   }
 }
