--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "jest --ci && next build",
     "dev": "next dev",
     "start": "next start",
     "test": "jest --watch",
