--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --coverage"
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
