--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -27,6 +29,7 @@
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "29.6.4",
     "msw": "^2.0.6",
+    "next-router-mock": "^0.9.10",
     "text-encoding": "^0.7.0",
     "undici": "^5.27.2"
   }
